added hint button and similarity info

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,6 +6,7 @@
     "guessPlaceholder": "Guess the song",
     "playXSeconds": "Play {{count}}s",
     "guessBtn": "Guess",
+    "hintBtn": "Hint",
     "skipBtn": "Skip",
     "giveUp": "Give up",
     "nextSong": "Next song",
