Spotify fixes, new settings page
0. Made the code less silver taped spaghetti <3

1. Updated to work with newest spotify changes, tested on spotify v1.2.26 and spicetify v2.28.1 (thanks theRealPadster!)

2. Added a game settings page
- go back to game button
- similarity requirement (1-100%)
- hint types
    - one letter
    - one word
    - one letter per word
- reset settings to default button (one letter, 80%)

3. Modified game stats page
- added go back to game button
- added reset stats button

planned features:
1. guess title or artist setting
2. standard guess or X random titles in form of buttons to choose from

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,6 +13,7 @@
     "menuEntry": "Play $t(appName)",
     "sendingURIs_one": "Sending {{count}} URI to $t(appName)",
     "sendingURIs_other": "Sending {{count}} URIs to $t(appName)",
+    "gobacktogamebutton": "Go back to game",
     "stats": {
       "title": "Stats",
       "time": "Time",
@@ -22,7 +23,18 @@
       "songWithCount_other": "{{count}} songs",
       "gaveUp": "gave up",
       "greaterThan16": ">16s",
-      "xSeconds": "{{count}}s"
+      "xSeconds": "{{count}}s",
+      "resetStatsButton": "Reset stats"
+    },
+    "settings": {
+      "title": "Settings",
+      "hintOneLetter": "Show one letter at a time",
+      "hintOneWord": "Show one word at a time",
+      "hintOneLetterOnEachWord": "Show one letter on each word",
+      "similarityRequirement": "Similarity requirement",
+      "hintSetting": "Hint setting",
+      "similarityPercentage": "{{percentage}}%",
+      "resetSettingsButton": "Reset settings to defaults"
     }
   }
 }
