Revised settings UI and similarity metrics
#13
- Added CSS for all elements at settings page
- Removed the "Name That Tune" from settings page, replacing it with "Game Settings"
- Changed minimum similarity requirement to 0 instead of 0.01
- Removed the two following zeroes at similarity display

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -27,7 +27,7 @@
       "resetStatsButton": "Reset stats"
     },
     "settings": {
-      "title": "Settings",
+      "title": "Game settings",
       "hintOneLetter": "Show one letter at a time",
       "hintOneWord": "Show one word at a time",
       "hintOneLetterOnEachWord": "Show one letter on each word",
