--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -27,7 +27,7 @@
       "resetStatsButton": "Zresetuj statystyki"
     },
     "settings": {
-      "title": "Ustawienia",
+      "title": "Ustawienia gry",
       "hintOneLetter": "Pokaż jedną literę na raz",
       "hintOneWord": "Pokaż jedno słowo na raz",
       "hintOneLetterOnEachWord": "Pokaż jedną literę na każde słowo",
