--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -11,8 +11,10 @@
     "giveUp": "Poddaj się",
     "nextSong": "Następna piosenka",
     "menuEntry": "Zagraj w $t(appName)",  
-    "sendingURIs_one": "Wysyłanie {{count}} URI do $t(appName)",
-    "sendingURIs_other": "Wysyłanie {{count}} URIs do $t(appName)",
+    "sendingURIs_one": "Wysyłanie {{count}} linku do $t(appName)",
+    "sendingURIs_few": "Wysyłanie {{count}} linków do $t(appName)",
+    "sendingURIs_many": "Wysyłanie {{count}} linków do $t(appName)",
+    "sendingURIs_other": "Wysyłanie {{count}} linków do $t(appName)",
     "gobacktogamebutton": "Wróć do gry",
     "stats": {
       "title": "Statystyki",
@@ -20,6 +22,8 @@
       "songs": "Piosenki",
       "winPercentage": "Procent wygranych: {{percentage}}%",
       "songWithCount_one": "{{count}} piosenka",
+      "songWithCount_few": "{{count}} piosenki",
+      "songWithCount_many": "{{count}} piosenek",
       "songWithCount_other": "{{count}} piosenek",
       "gaveUp": "poddałeś się",
       "greaterThan16": ">16s",
