added Stage Scaling setting
- stageToTime is now scaled acording to stageScaling setting, which is diving the time to make stages shorter
- with EN/PL translation
- also removed unused stageToTime import in Settings.tsx

a lot cleaner solution than hardcoded /4 divider

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -37,7 +37,9 @@
       "resetSettingsButton": "Reset settings to defaults",
       "inputMethod": "Input method",
       "inputKeyboard": "Keyboard",
-      "inputButtons": "Buttons"
+      "inputButtons": "Buttons",
+      "stageScaling": "Stage scaling",
+      "stageScalingNumber": "Shorter by {{multiplier}} times"
     }
   }
 }
