--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -41,7 +41,9 @@
       "resetSettingsButton": "Przywróć ustawienia domyślne",
       "inputMethod": "Metoda wprowadzania", 
       "inputKeyboard": "Klawiatura",
-      "inputButtons": "Przyciski"
+      "inputButtons": "Przyciski",
+      "stageScaling": "Skalowanie etapów",
+      "stageScalingNumber": "Krótsze o {{multiplier}} razy"
     }
   }
 }
