add artist guess mode #4
also fixed #18

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -37,7 +37,10 @@
       "resetSettingsButton": "Reset settings to defaults",
       "inputMethod": "Input method",
       "inputKeyboard": "Keyboard",
-      "inputButtons": "Buttons"
+      "inputButtons": "Buttons",
+      "guessTarget": "Guess target",
+      "guessSong": "Song",
+      "guessArtist": "Artist"
     }
   }
 }
